# video_sharing_transcoder

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  directory_upload_manager.rs  filestore.rs  lib.rs  main.rs  message_broker.rs  transcoding.rs  video.rs
